crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__predicates__select_where_name_neq.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 126,
        "Title": "Unplugged [Live]"
      },
      {
        "AlbumId": 127,
        "Title": "BBC Sessions [Disc 2] [Live]"
      },
      {
        "AlbumId": 128,
        "Title": "Coda"
      },
      {
        "AlbumId": 130,
        "Title": "In Through The Out Door"
      },
      {
        "AlbumId": 131,
        "Title": "IV"
      }
    ]
  }
]
