crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__predicates__select_where_variable.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      },
      {
        "Title": "Garage Inc. (Disc 2)"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Beyond Good And Evil"
      }
    ]
  }
]
